# trust_pdf

./: .gitignore  Cargo.toml  README.md
src/: increment_validation.rs  lib.rs  main.rs  openssl.rs  validate_signature.rs  verify_pdf.rs
src/pdf_validation/: increment_validation.rs  mod.rs
test_data/trusted_CAs/: GovBrFinalV1.pem  test_ca.pem
