[package]
name = "trust_pdf"
version = "2.0.4"
edition = "2021"
authors = ["Lucas Clemente Vella <lvella@gmail.com>"]
description = "Verifies signed PDFs against the originals, checking for sneaky modifications."
license = "MIT"
repository = "https://github.com/lvella/trust_pdf"
readme = "README.md"

[dependencies]
anyhow = "1.0"
array-init = "2.1"
lazy_static = "1.5"
lopdf = { version = "0.34", default-features = false, features = [
	"nom_parser",
] }
openssl = { version = "0.10", optional = true }
regex = "1.10"
thiserror = "1.0"

[features]
default = ["openssl", "rayon"]
openssl = ["dep:openssl"]
rayon = ["lopdf/rayon"]
